# tcl-easy-beast

./: CMakeLists.txt  README.md  easybeast.geany  lib.tcl  pkgIndex.tcl  tclp.yaml
easy_beast/: pkgIndex.tcl
easybeast/: pkgIndex.tcl
src/: lib.c
tests/: server.test
